Windows compilation support using clang from mingw64 package + cuda module using Visual C++.

--- a/hash/gpu/amdgcn/CLRX/amdbin/CMakeLists.txt
+++ b/hash/gpu/amdgcn/CLRX/amdbin/CMakeLists.txt
@@ -28,21 +28,13 @@ SET(LIBAMDBINSRC
         GalliumBinaries.cpp
         ROCmBinaries.cpp)
 
-SET(LINK_LIBRARIES CLRXUtils)
+ADD_LIBRARY(CLRXAmdBinStatic STATIC ${LIBAMDBINSRC})
+SET_TARGET_OUTNAME(CLRXAmdBinStatic CLRXAmdBin)
+SET_PROPERTY(TARGET CLRXAmdBinStatic PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-ADD_LIBRARY(CLRXAmdBin SHARED ${LIBAMDBINSRC})
-
-TARGET_LINK_LIBRARIES(CLRXAmdBin ${LINK_LIBRARIES})
-SET_TARGET_PROPERTIES(CLRXAmdBin PROPERTIES VERSION ${CLRX_LIB_VERSION}
-        SOVERSION ${CLRX_MAJOR_VERSION})
-
-INSTALL(TARGETS CLRXAmdBin LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-        ARCHIVE DESTINATION ${LIB_INSTALL_DIR} RUNTIME DESTINATION bin)
-
-IF(NOT NO_STATIC)
-    ADD_LIBRARY(CLRXAmdBinStatic STATIC ${LIBAMDBINSRC})
-    SET_TARGET_OUTNAME(CLRXAmdBinStatic CLRXAmdBin)
-    
-    INSTALL(TARGETS CLRXAmdBinStatic ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
-            LIBRARY DESTINATION ${LIB_INSTALL_DIR})
-ENDIF(NOT NO_STATIC)
+if(WIN32)
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+endif()
