--- a/hash/gpu/amdgcn/CLRX/clhelper/CMakeLists.txt
+++ b/hash/gpu/amdgcn/CLRX/clhelper/CMakeLists.txt
@@ -21,21 +21,13 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
 SET(LIBCLHELPERSRC CLHelper.cpp)
 
-SET(LINK_LIBRARIES CLRXAmdAsm CLRXAmdBin CLRXUtils OpenCL)
+ADD_LIBRARY(CLRXCLHelperStatic STATIC ${LIBCLHELPERSRC})
+SET_TARGET_OUTNAME(CLRXCLHelperStatic CLRXCLHelper)
+SET_PROPERTY(TARGET CLRXCLHelperStatic PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-ADD_LIBRARY(CLRXCLHelper SHARED ${LIBCLHELPERSRC})
-
-TARGET_LINK_LIBRARIES(CLRXCLHelper ${LINK_LIBRARIES})
-SET_TARGET_PROPERTIES(CLRXCLHelper PROPERTIES VERSION ${CLRX_LIB_VERSION}
-        SOVERSION ${CLRX_MAJOR_VERSION})
-
-INSTALL(TARGETS CLRXCLHelper LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-        ARCHIVE DESTINATION ${LIB_INSTALL_DIR} RUNTIME DESTINATION bin)
-
-IF(NOT NO_STATIC)
-    ADD_LIBRARY(CLRXCLHelperStatic STATIC ${LIBCLHELPERSRC})
-    SET_TARGET_OUTNAME(CLRXCLHelperStatic CLRXCLHelper)
-    
-    INSTALL(TARGETS CLRXCLHelperStatic ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
-            LIBRARY DESTINATION ${LIB_INSTALL_DIR})
-ENDIF(NOT NO_STATIC)
+if(WIN32)
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+endif()
