--- a/hash/gpu/amdgcn/CLRX/utils/CMakeLists.txt
+++ b/hash/gpu/amdgcn/CLRX/utils/CMakeLists.txt
@@ -19,23 +19,15 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
-SET(LINK_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
-
 SET(LIBUTILSSRC CLIParser.cpp GPUId.cpp InputOutput.cpp NumStringConv.cpp Utilities.cpp)
 
-ADD_LIBRARY(CLRXUtils SHARED ${LIBUTILSSRC})
+ADD_LIBRARY(CLRXUtilsStatic STATIC ${LIBUTILSSRC})
+SET_TARGET_OUTNAME(CLRXUtilsStatic CLRXUtils)
+SET_PROPERTY(TARGET CLRXUtilsStatic PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-TARGET_LINK_LIBRARIES(CLRXUtils ${LINK_LIBRARIES})
-SET_TARGET_PROPERTIES(CLRXUtils PROPERTIES VERSION ${CLRX_LIB_VERSION}
-        SOVERSION ${CLRX_MAJOR_VERSION})
-
-INSTALL(TARGETS CLRXUtils LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-        ARCHIVE DESTINATION ${LIB_INSTALL_DIR} RUNTIME DESTINATION bin)
-
-IF(NOT NO_STATIC)
-    ADD_LIBRARY(CLRXUtilsStatic STATIC ${LIBUTILSSRC})
-    SET_TARGET_OUTNAME(CLRXUtilsStatic CLRXUtils)
-    
-    INSTALL(TARGETS CLRXUtilsStatic ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
-            LIBRARY DESTINATION ${LIB_INSTALL_DIR})
-ENDIF(NOT NO_STATIC)
+if(WIN32)
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+endif()
