--- a/hash/gpu/amdgcn/CLRX/amdasm/CMakeLists.txt
+++ b/hash/gpu/amdgcn/CLRX/amdasm/CMakeLists.txt
@@ -47,21 +47,13 @@ SET(LIBAMDASMSRC
         GCNDisasmDecode.cpp
         GCNInstructions.cpp)
 
-SET(LINK_LIBRARIES CLRXAmdBin CLRXUtils)
+ADD_LIBRARY(CLRXAmdAsmStatic STATIC ${LIBAMDASMSRC})
+SET_TARGET_OUTNAME(CLRXAmdAsmStatic CLRXAmdAsm)
+SET_PROPERTY(TARGET CLRXAmdAsmStatic PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-ADD_LIBRARY(CLRXAmdAsm SHARED ${LIBAMDASMSRC})
-
-TARGET_LINK_LIBRARIES(CLRXAmdAsm ${LINK_LIBRARIES})
-SET_TARGET_PROPERTIES(CLRXAmdAsm PROPERTIES VERSION ${CLRX_LIB_VERSION}
-        SOVERSION ${CLRX_MAJOR_VERSION})
-
-INSTALL(TARGETS CLRXAmdAsm LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-        ARCHIVE DESTINATION ${LIB_INSTALL_DIR} RUNTIME DESTINATION bin)
-
-IF(NOT NO_STATIC)
-    ADD_LIBRARY(CLRXAmdAsmStatic STATIC ${LIBAMDASMSRC})
-    SET_TARGET_OUTNAME(CLRXAmdAsmStatic CLRXAmdAsm)
-    
-    INSTALL(TARGETS CLRXAmdAsmStatic ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
-            LIBRARY DESTINATION ${LIB_INSTALL_DIR})
-ENDIF(NOT NO_STATIC)
+if(WIN32)
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /D_CRT_SECURE_NO_WARNINGS=1 /MD")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /D_CRT_SECURE_NO_WARNINGS=1 /MDd")
+endif()
