--- a/hiveos/h-manifest.conf
+++ b/hiveos/h-manifest.conf
@@ -7,18 +7,14 @@
 #
 
 
-# The name of the miner
 CUSTOM_NAME=ariominer
 
-# Optional version of your custom miner package
 CUSTOM_VERSION=0.2.0
 
-# Full path to miner config file
 CUSTOM_CONFIG_FILENAME=/hive/miners/custom/${CUSTOM_NAME}/${CUSTOM_NAME}.conf
 
-# Full path to log file basename. WITHOUT EXTENSION (don't include .log at the end)
-# Used to truncate logs and rotate,
-# E.g. /var/log/miner/mysuperminer/somelogname (filename without .log at the end)
 CUSTOM_LOG_BASENAME=/var/log/miner/$CUSTOM_NAME/$CUSTOM_NAME
+
+CUSTOM_LOG_FOLDER=/var/log/miner/$CUSTOM_NAME
 
 CUSTOM_API_PORT=10000
